--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
     </div>
 
     <script>
-        // Global variables for storing questions and participant data
+        // Full question set
         const questions = [
             {
                 question: "Why is it insufficient to measure safety performance solely by counting fatalities?",
@@ -317,7 +317,105 @@
                 correct: 1,
                 reference: "Page 3: 'Is it sufficient to only count the number of fatalities when measuring safety performance?'"
             },
-            // Add all the other questions here...
+            {
+                question: "What is the key limitation of past-oriented safety thinking as described in the evolution of safety thinking?",
+                options: [
+                    "It focuses too much on future risks",
+                    "It's difficult to study something that is absent (you can only measure safety when it's missing)",
+                    "It requires expensive data collection systems",
+                    "It over-emphasizes personal protective equipment"
+                ],
+                correct: 1,
+                reference: "Page 6: 'Challenge: Difficult to study something that is absent - you can only measure safety when it's missing!'"
+            },
+            {
+                question: "According to the Human Organizational Performance (HOP) principles, why does blame fix nothing?",
+                options: [
+                    "Because it's legally risky for the organization",
+                    "Because punitive approaches inhibit learning and improvement",
+                    "Because workers will always make mistakes regardless",
+                    "Because safety incidents are usually caused by equipment failures"
+                ],
+                correct: 1,
+                reference: "Page 10: '2 Blame Fix Nothing - Punitive approaches inhibit learning and improvement'"
+            },
+            {
+                question: "What does resilience safety emphasize that traditional safety approaches often miss?",
+                options: [
+                    "The need for more safety rules and procedures",
+                    "The importance of adapting to the complexity of real-world systems",
+                    "Increased supervision of frontline workers",
+                    "Higher penalties for safety violations"
+                ],
+                correct: 1,
+                reference: "Page 8: 'Resilience engineering advocates that accidents represent not only failures of the system but also failures in adapting to the complexity of the real world.'"
+            },
+            {
+                question: "According to Kahn's Personal Engagement Theory, what are the three critical conditions for effective leadership engagement?",
+                options: [
+                    "Authority, Control, and Discipline",
+                    "Compliance, Documentation, and Enforcement",
+                    "Meaningfulness, Safety, and Availability",
+                    "Planning, Execution, and Follow-up"
+                ],
+                correct: 2,
+                reference: "Page 20: 'Effective leadership engagement creates three critical conditions: Meaningfulness, Safety, and Availability'"
+            },
+            {
+                question: "What percentage of safety incidents can be reduced with quality leadership engagement according to the statistics shown?",
+                options: [
+                    "10%",
+                    "25%",
+                    "40%",
+                    "60%"
+                ],
+                correct: 2,
+                reference: "Page 16: '40% reduction in safety incidents with quality leadership engagement'"
+            },
+            {
+                question: "When focusing on life-threatening hazards during leadership engagement, what should leaders ask workers?",
+                options: [
+                    "'How many safety rules have you broken this week?'",
+                    "'What could kill me while I'm here today?'",
+                    "'Who was the last person to report a safety violation?'",
+                    "'How often do you use your PPE?'"
+                ],
+                correct: 1,
+                reference: "Page 23: 'Critical Questions: \"What could kill me while I'm here today?\"'"
+            },
+            {
+                question: "What is the primary reason we need to place more focus on systems rather than individuals according to the safety talk?",
+                options: [
+                    "Because systems are easier to change than people",
+                    "Because our choices and actions are shaped by the conditions around us",
+                    "Because systems cost less to modify than training programs",
+                    "Because OSHA focuses on system compliance"
+                ],
+                correct: 1,
+                reference: "Page 13: 'Our choices and actions are shaped by the conditions around us. We need to understand how people, technology, work processes, and the organization interact.'"
+            },
+            {
+                question: "What is the key message leaders should convey about safety priorities on having effective leadership engagement?",
+                options: [
+                    "'Safety is important, but we have deadlines to meet'",
+                    "'If there's ever a conflict between getting the job done and getting home safely, we choose getting home safely every time'",
+                    "'Safety is everyone's responsibility, but management has the final say'",
+                    "'We have a zero-tolerance policy for safety violations'"
+                ],
+                correct: 1,
+                reference: "Page 22: 'Message to Convey: \"If there's ever a conflict between getting the job done and getting home safely, we choose getting home safely every time.\"'"
+            },
+            {
+                question: "What is the main difference between traditional safety and resilience safety approaches?",
+                options: [
+                    "Traditional safety is more expensive to implement",
+                    "Resilience safety is adaptive and proactive rather than just finding and fixing problems",
+                    "Traditional safety only works in office environments",
+                    "Resilience safety eliminates the need for safety rules"
+                ],
+                correct: 1,
+                reference: "Page 7: 'Traditional Safety - Find and fix approach' vs 'Resilience Safety - Adaptive and proactive'"
+            }
         ];
 
         let currentQuestion = 0;
@@ -347,7 +445,6 @@
 
         // Function to start the quiz
         function startQuiz() {
-            // Collect participant information
             const name = document.getElementById('participantName').value;
             const email = document.getElementById('participantEmail').value;
             const role = document.getElementById('participantRole').value;
@@ -367,15 +464,12 @@
                 responses: []
             };
 
-            // Initialize answers array
             selectedAnswers = new Array(questions.length).fill(null);
 
-            // Show question screen
             document.getElementById('startScreen').classList.add('hidden');
             document.getElementById('questionScreen').classList.remove('hidden');
             document.getElementById('navigation').classList.remove('hidden');
 
-            // Load first question
             loadQuestion();
         }
 
@@ -406,21 +500,16 @@
             updateProgress();
         }
 
-        // Select an option
         function selectOption(index) {
             selectedAnswers[currentQuestion] = index;
-
-            // Update visual selection
             const options = document.querySelectorAll('.option');
             options.forEach((option, i) => {
                 option.classList.toggle('selected', i === index);
             });
 
-            // Enable next button
             document.getElementById('nextBtn').disabled = false;
         }
 
-        // Navigate to next question
         function nextQuestion() {
             if (currentQuestion < questions.length - 1) {
                 currentQuestion++;
@@ -430,7 +519,6 @@
             }
         }
 
-        // Navigate to previous question
         function previousQuestion() {
             if (currentQuestion > 0) {
                 currentQuestion--;
@@ -438,7 +526,6 @@
             }
         }
 
-        // Update navigation buttons
         function updateNavigation() {
             document.getElementById('prevBtn').disabled = currentQuestion === 0;
             document.getElementById('nextBtn').disabled = selectedAnswers[currentQuestion] === null;
@@ -450,15 +537,12 @@
             }
         }
 
-        // Update progress bar
         function updateProgress() {
             const progress = ((currentQuestion + 1) / questions.length) * 100;
             document.getElementById('progressFill').style.width = progress + '%';
         }
 
-        // Finish quiz
         function finishQuiz() {
-            // Calculate score
             let score = 0;
             selectedAnswers.forEach((answer, index) => {
                 if (answer === questions[index].correct) {
@@ -466,7 +550,6 @@
                 }
             });
 
-            // Prepare response data
             participantData.responses = selectedAnswers.map((answer, index) => ({
                 questionNumber: index + 1,
                 question: questions[index].question,
@@ -482,19 +565,16 @@
             participantData.percentage = Math.round((score / questions.length) * 100);
             participantData.endTime = new Date().toISOString();
 
-            // Send data to Google Sheets
             sendToGoogleSheets(participantData);
 
-            // Show results
             document.getElementById('questionScreen').classList.add('hidden');
             document.getElementById('navigation').classList.add('hidden');
             document.getElementById('endScreen').classList.remove('hidden');
-
+            
             document.getElementById('scoreText').textContent = `Your Score: ${score}/${questions.length}`;
             document.getElementById('scorePercentage').textContent = `${Math.round((score / questions.length) * 100)}%`;
         }
 
-        // Restart quiz
         function restartQuiz() {
             currentQuestion = 0;
             selectedAnswers = [];
@@ -502,14 +582,10 @@
 
             document.getElementById('endScreen').classList.add('hidden');
             document.getElementById('startScreen').classList.remove('hidden');
-
-            // Clear form
             document.getElementById('participantName').value = '';
             document.getElementById('participantEmail').value = '';
             document.getElementById('participantRole').value = '';
             document.getElementById('assessmentType').value = '';
-
-            // Reset progress
             document.getElementById('progressFill').style.width = '0%';
         }
     </script>
